app/assets/stylesheets/cfa_ui_components.tailwind.css
@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');

@theme {
    --color-link-unvisited: #0358A2;
    --color-link-visited: #4C2C92;
}

body {
    font-family: "Public Sans", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;

    font-size: 16px;
    font-weight: 400;

    @apply antialiased;
}

h1 {
    font-size: 48px;
    font-weight: 700;
}

h2 {
    font-size: 22px;
    font-weight: 400;
}

.label {
    @apply text-zinc-900;
    font-size: 13px;
    font-weight: 700;
}

.label.required::after {
    @apply text-red-700;
    content: " *";
}

.help_text {
    @apply block text-zinc-500;
    font-size: 13px;
    font-weight: 400;
}

ul {
    list-style-type: disc;
    list-style-position: inside;
}

ol {
    list-style-type: decimal;
    list-style-position: inside;
}

a {
    &:not(.btn) {
        @apply text-link-unvisited underline;
    }
}

a:visited {
    &:not(.btn) {
        @apply text-link-visited;
    }
}

form {
    @apply space-y-6;
}

.btn {
    @apply block text-center rounded border;

    a {
        @apply text-inherit no-underline;
    }
}

.btn--primary {
    @apply bg-black border-none text-gray-50;
}

.btn--secondary {
    @apply bg-white border-2 text-black;
}

.btn--small {
    @apply px-3 py-2;
}

.btn--large {
    @apply px-6 py-4;
    font-size: 22px;
    font-weight: 700;
}

.form_errors {
    @apply text-red-500 mt-2;
    font-size: 16px;
    font-weight: 700;
}

.field_with_errors {
    display: inline;
}

